--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,23 @@ if (USE_CUDA)
   set(CUDAToolkit_ROOT $ENV{CONDA_PREFIX})
 endif()
 
+if (USE_ROCM)
+    // TODO
+    enable_language(CUDA)
+    add_compile_definitions(USE_CUDA)
+    include_directories(include/devices/cuda)
+    #message(${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+    set(FASTLLM_CUDA_SOURCES src/devices/cuda/cudadevice.cpp src/devices/cuda/cudadevicebatch.cpp src/devices/cuda/fastllm-cuda.cu)
+    set(FASTLLM_LINKED_LIBS ${FASTLLM_LINKED_LIBS} cublas)
+    set(CMAKE_CUDA_ARCHITECTURES "native")
+  link_directories($ENV{CONDA_PREFIX}/lib)
+  include_directories($ENV{CONDA_PREFIX}/include)
+  set(CMAKE_PREFIX_PATH $ENV{CONDA_PREFIX} ${CMAKE_PREFIX_PATH})
+
+  set(CMAKE_CUDA_COMPILER $ENV{CONDA_PREFIX}/bin/nvcc)
+  set(CUDAToolkit_ROOT $ENV{CONDA_PREFIX})
+endif()
+
 if (PY_API)
     set(PYBIND third_party/pybind11)
     add_subdirectory(${PYBIND})
