--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project(fastllm LANGUAGES CXX)
 
 option(USE_CUDA "use cuda" OFF)
+option(USE_ROCM "use rocm" OFF)
 
 option(PY_API "python api" OFF)
 option(USE_MMAP "use mmap" OFF)
@@ -11,6 +12,7 @@ option(USE_SENTENCEPIECE "use sentencepiece" OFF)
 option(CMAKE_CUDA_ARCHITECTURES "The CUDA arch: native or number" "native")
 
 message(STATUS "USE_CUDA: ${USE_CUDA}")
+message(STATUS "USE_ROCM: ${USE_ROCM}")
 message(STATUS "PYTHON_API: ${PY_API}")
 
 message(STATUS "USE_SENTENCEPIECE: ${USE_SENTENCEPIECE}")
@@ -62,22 +64,22 @@ endif()
 
 if (USE_ROCM)
     enable_language(HIP)
+    add_compile_definitions(USE_ROCM)
+    set(CMAKE_HIP_COMPILER_ROCM_ROOT "/opt/rocm-5.7.1")
     find_package(rocprim REQUIRED CONFIG PATHS "/opt/rocm/rocprim")
+    find_package(HIPBLAS REQUIRED)
     include_directories(${rocprim_INCLUDE_DIRS})
-    
-    # TODO
-    # add_compile_definitions(USE_CUDA)
-    include_directories(include/devices/rocm)
-    #message(${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+    link_libraries(roc::rocprim_hip roc::hipblas)
     set(FASTLLM_CUDA_SOURCES src/devices/rocm/rocmdevice.cpp src/devices/rocm/rocmdevicebatch.cpp src/devices/rocm/fastllm-rocm.hip)
-    set(FASTLLM_LINKED_LIBS ${FASTLLM_LINKED_LIBS} cublas)
-    set(CMAKE_CUDA_ARCHITECTURES "native")
+    
+set_property(GLOBAL PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(GLOBAL PROPERTY HIP_ARCHITECTURES gfx906 gfx908 gfx90a gfx1100) # Tested on MI50, MI100, MI210, W7900
+set_property(GLOBAL PROPERTY HIP_STANDARD 17)
+    include_directories(include/devices/rocm)
   link_directories($ENV{CONDA_PREFIX}/lib)
   include_directories($ENV{CONDA_PREFIX}/include)
   set(CMAKE_PREFIX_PATH $ENV{CONDA_PREFIX} ${CMAKE_PREFIX_PATH})
 
-  set(CMAKE_CUDA_COMPILER $ENV{CONDA_PREFIX}/bin/nvcc)
-  set(CUDAToolkit_ROOT $ENV{CONDA_PREFIX})
 endif()
 
 if (PY_API)
@@ -90,13 +92,14 @@ if (PY_API)
 
     include_directories(third_party/pybind11/include)
     file(GLOB FASTLLM_CXX_HEADERS include/**/*.h)
-    add_library(pyfastllm MODULE src/pybinding.cpp ${FASTLLM_CXX_SOURCES} ${FASTLLM_CXX_HEADERS} ${FASTLLM_CUDA_SOURCES})
+    add_library(pyfastllm MODULE src/pybinding.cpp ${FASTLLM_CXX_SOURCES} ${FASTLLM_CXX_HEADERS} ${FASTLLM_CUDA_SOURCES} ${FASTLLM_ROCM_SOURCES})
     target_link_libraries(pyfastllm PUBLIC pybind11::module ${FASTLLM_LINKED_LIBS})
     pybind11_extension(pyfastllm)
 else()
 add_library(fastllm OBJECT
             ${FASTLLM_CXX_SOURCES}
             ${FASTLLM_CUDA_SOURCES}
+            ${FASTLLM_ROCM_SOURCES}
             )
 target_link_libraries(fastllm PUBLIC ${FASTLLM_LINKED_LIBS})
 
@@ -124,7 +127,7 @@ target_link_libraries(benchmark fastllm)
 add_executable(apiserver example/apiserver/apiserver.cpp example/apiserver/json11.cpp)
 target_link_libraries(apiserver fastllm)
 
-add_library(fastllm_tools SHARED ${FASTLLM_CXX_SOURCES} ${FASTLLM_CUDA_SOURCES} tools/src/pytools.cpp)
+add_library(fastllm_tools SHARED ${FASTLLM_CXX_SOURCES} ${FASTLLM_CUDA_SOURCES} ${FASTLLM_ROCM_SOURCES} tools/src/pytools.cpp)
 target_link_libraries(fastllm_tools PUBLIC ${FASTLLM_LINKED_LIBS})
 
 if (${CMAKE_HOST_WIN32})
